--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="Digital Dr Karl, X bot detector, X profile analyzer, AI insights, bot detection, Dr Karl, Aussie humor">
     <meta property="og:title" content="Digital Dr Karl 🧑‍🔬">
     <meta property="og:description" content="Analyze X profiles with Digital Dr Karl and expose bots using real data.">
-    <meta property="og:url" content="https://digital-dr-karl.pages.dev/">
+    <meta property="og:url" content="https://webswiftseo.github.io/digital-dr-karl/">
     <meta name="twitter:card" content="summary_large_image">
 
     <!-- Chart.js for Graphs -->
@@ -115,9 +115,10 @@
         const clientSecret = 'C0lqIDxzm0n6pkVVhQe-m5mhsz4hX-rq9hJ-B-s7cRv7oLtfft'; // Replace with your actual Client Secret
         let bearerToken = '';
 
+        const corsProxy = 'https://api.allorigins.win/raw?url='; // GitHub Pages-friendly CORS proxy
+
         async function getBearerToken() {
             const credentials = btoa(`${clientId}:${clientSecret}`);
-            const corsProxy = 'https://corsproxy.io/?';
 
             try {
                 const response = await fetch(`${corsProxy}https://api.x.com/oauth2/token`, {
@@ -130,12 +131,8 @@
                 });
 
                 const data = await response.json();
-                if (data.access_token) {
-                    bearerToken = data.access_token;
-                    console.log('Bearer Token:', bearerToken);
-                } else {
-                    console.error('Failed to obtain bearer token:', data);
-                }
+                bearerToken = data.access_token;
+                console.log('Bearer Token:', bearerToken);
             } catch (error) {
                 console.error('Error fetching bearer token:', error);
             }
@@ -158,7 +155,7 @@
             const cleanUsername = usernameInput.replace(/^https?:\/\/(www\.)?(x\.com|twitter\.com)\//, '').trim();
 
             try {
-                const response = await fetch(`https://api.x.com/2/users/by/username/${cleanUsername}?user.fields=public_metrics,created_at`, {
+                const response = await fetch(`${corsProxy}https://api.x.com/2/users/by/username/${cleanUsername}?user.fields=public_metrics,created_at`, {
                     headers: { "Authorization": `Bearer ${bearerToken}` }
                 });
 
