--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         const clientSecret = 'C0lqIDxzm0n6pkVVhQe-m5mhsz4hX-rq9hJ-B-s7cRv7oLtfft'; // Replace with your actual Client Secret
         let bearerToken = '';
 
-        const corsProxy = 'https://api.allorigins.win/raw?url='; // GitHub Pages-friendly CORS proxy
+        const corsProxy = 'https://thingproxy.freeboard.io/fetch/'; // GitHub Pages-friendly CORS proxy
 
         async function getBearerToken() {
             const credentials = btoa(`${clientId}:${clientSecret}`);
