--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="Digital Dr Karl, X bot detector, X profile analyzer, AI insights, bot detection, Dr Karl, Aussie humor">
     <meta property="og:title" content="Digital Dr Karl 🧑‍🔬">
     <meta property="og:description" content="Analyze X profiles with Digital Dr Karl and expose bots using real data.">
-    <meta property="og:url" content="https://webswiftseo.github.io/digital-dr-karl/">
+    <meta property="og:url" content="https://your-username.github.io/digital-dr-karl/">
     <meta name="twitter:card" content="summary_large_image">
 
     <!-- Chart.js for Graphs -->
@@ -111,32 +111,7 @@
     <button class="share-btn" onclick="shareDoctorKarl()">📤 Share Digital Dr Karl</button>
 
     <script>
-        const clientId = 'Ui1aNmRzWmw2ZXJubWNtc3FNdXQ6MTpjaQ'; // Replace with your actual Client ID
-        const clientSecret = 'C0lqIDxzm0n6pkVVhQe-m5mhsz4hX-rq9hJ-B-s7cRv7oLtfft'; // Replace with your actual Client Secret
-        let bearerToken = '';
-
-        const corsProxy = 'https://thingproxy.freeboard.io/fetch/'; // GitHub Pages-friendly CORS proxy
-
-        async function getBearerToken() {
-            const credentials = btoa(`${clientId}:${clientSecret}`);
-
-            try {
-                const response = await fetch(`${corsProxy}https://api.x.com/oauth2/token`, {
-                    method: 'POST',
-                    headers: {
-                        'Authorization': `Basic ${credentials}`,
-                        'Content-Type': 'application/x-www-form-urlencoded;charset=UTF-8'
-                    },
-                    body: 'grant_type=client_credentials'
-                });
-
-                const data = await response.json();
-                bearerToken = data.access_token;
-                console.log('Bearer Token:', bearerToken);
-            } catch (error) {
-                console.error('Error fetching bearer token:', error);
-            }
-        }
+        const corsProxy = 'https://api.allorigins.win/raw?url='; // CORS bypass
 
         async function analyzeProfile() {
             const usernameInput = document.getElementById('username').value;
@@ -148,16 +123,10 @@
                 return;
             }
 
-            if (!bearerToken) {
-                await getBearerToken();
-            }
-
             const cleanUsername = usernameInput.replace(/^https?:\/\/(www\.)?(x\.com|twitter\.com)\//, '').trim();
 
             try {
-                const response = await fetch(`${corsProxy}https://api.x.com/2/users/by/username/${cleanUsername}?user.fields=public_metrics,created_at`, {
-                    headers: { "Authorization": `Bearer ${bearerToken}` }
-                });
+                const response = await fetch(`${corsProxy}https://api.x.com/2/users/by/username/${cleanUsername}?user.fields=public_metrics,created_at`);
 
                 if (!response.ok) throw new Error(`X API error: ${response.status}`);
 
