--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="Digital Dr Karl, X bot detector, X profile analyzer, AI insights, bot detection, Dr Karl, Aussie humor">
     <meta property="og:title" content="Digital Dr Karl 🧑‍🔬">
     <meta property="og:description" content="Analyze X profiles with Digital Dr Karl and expose bots using real data.">
-    <meta property="og:url" content="https://your-username.github.io/digital-dr-karl/">
+    <meta property="og:url" content="https://webswiftseo.github.io/digital-dr-karl/">
     <meta name="twitter:card" content="summary_large_image">
 
     <!-- Chart.js for Graphs -->
