--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Digital Dr Karl 🧑‍🔬</title>
 
     <!-- SEO Metadata -->
-    <meta name="description" content="Digital Dr Karl – Analyze X profiles and detect bots using AI and the X API! 🤖⚡">
-    <meta name="keywords" content="Digital Dr Karl, X bot detector, X profile analyzer, AI insights, bot detection, Dr Karl, Aussie humor">
+    <meta name="description" content="Digital Dr Karl – Analyze X profiles, detect bots, and have a laugh! 🤖⚡">
+    <meta name="keywords" content="Digital Dr Karl, X bot detector, X profile analyzer, AI insights, bot detection, Dr Karl, Aussie humor, X API, social media analysis">
     <meta property="og:title" content="Digital Dr Karl 🧑‍🔬">
     <meta property="og:description" content="Analyze X profiles with Digital Dr Karl and expose bots using real data.">
     <meta property="og:url" content="https://webswiftseo.github.io/digital-dr-karl/">
@@ -17,6 +17,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     <style>
+        /* Main Styling */
         body {
             background-color: black;
             color: gold;
@@ -94,6 +95,12 @@
             color: white;
             box-shadow: 0px 0px 25px gold, 0px 0px 25px green;
         }
+
+        footer {
+            margin-top: 50px;
+            color: gray;
+            font-size: 12px;
+        }
     </style>
 </head>
 <body>
@@ -109,6 +116,10 @@
     </div>
 
     <button class="share-btn" onclick="shareDoctorKarl()">📤 Share Digital Dr Karl</button>
+
+    <footer>
+        <p>Made with ❤️ and Aussie humor. Powered by the X API. 🚀</p>
+    </footer>
 
     <script>
         const corsProxy = 'https://api.allorigins.win/raw?url='; // CORS bypass
@@ -127,12 +138,17 @@
 
             try {
                 const response = await fetch(`${corsProxy}https://api.x.com/2/users/by/username/${cleanUsername}?user.fields=public_metrics,created_at`);
-
-                if (!response.ok) throw new Error(`X API error: ${response.status}`);
-
                 const data = await response.json();
+
+                // ✅ Check if data exists before accessing
+                if (!data.data) {
+                    resultDiv.innerHTML = `<span style="color: red;">❌ User not found or API error.</span>`;
+                    return;
+                }
+
                 const { public_metrics, created_at } = data.data;
 
+                // 🤖 Calculate Bot Score Based on Heuristics
                 let botScore = 0;
                 if (public_metrics.followers_count < 50) botScore += 30;
                 if (public_metrics.following_count > 1000) botScore += 30;
@@ -154,42 +170,4 @@
 
             } catch (error) {
                 console.error("Error:", error);
-                resultDiv.innerHTML = `<span style="color: red;">Error: ${error.message}</span>`;
-            }
-        }
-
-        function createChart(followers, following, tweets, botScore) {
-            const ctx = document.getElementById('botChart').getContext('2d');
-            new Chart(ctx, {
-                type: 'bar',
-                data: {
-                    labels: ['Followers', 'Following', 'Tweets', 'Bot Score'],
-                    datasets: [{
-                        label: 'Bot Analysis',
-                        data: [followers, following, tweets, botScore],
-                        backgroundColor: ['green', 'gold', 'gold', botScore > 60 ? 'red' : 'green']
-                    }]
-                },
-                options: {
-                    responsive: true,
-                    scales: {
-                        y: { beginAtZero: true }
-                    }
-                }
-            });
-        }
-
-        function shareDoctorKarl() {
-            if (navigator.share) {
-                navigator.share({
-                    title: "Digital Dr Karl",
-                    text: "Check out this X profile analyzer!",
-                    url: window.location.href
-                }).catch(err => console.log('Error sharing:', err));
-            } else {
-                alert("Sharing not supported on this browser.");
-            }
-        }
-    </script>
-</body>
-</html>
+                resultDiv.innerHTML = `<span style="color: red;">Error: ${error.me
