--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digital Dr Karl 🧑‍🔬</title>
 
+    <!-- Favicon -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+
     <!-- SEO Metadata -->
     <meta name="description" content="Digital Dr Karl – Analyze X profiles, detect bots, and have a laugh! 🤖⚡">
     <meta name="keywords" content="Digital Dr Karl, X bot detector, X profile analyzer, AI insights, bot detection, Dr Karl, Aussie humor, X API, social media analysis">
@@ -17,6 +20,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     <style>
+        /* Main Styling */
         body {
             background-color: black;
             color: gold;
@@ -123,6 +127,7 @@
     <script>
         // ✅ Add your Bearer Token here
         const bearerToken = 'AAAAAAAAAAAAAAAAAAAAAK%2BezQEAAAAAor5aL3gMsXWug1ES5NGnJwOsBrk%3DgMTyJpMvnLHyHAfGSnqeEM3O7m6tQCLdHMAAkTQGEvVjWIPQxJ';
+        const corsProxy = 'https://cors-anywhere.herokuapp.com/'; // Public CORS Proxy
 
         async function analyzeProfile() {
             const usernameInput = document.getElementById('username').value;
@@ -137,7 +142,7 @@
             const cleanUsername = usernameInput.replace(/^https?:\/\/(www\.)?(x\.com|twitter\.com)\//, '').trim();
 
             try {
-                const response = await fetch(`https://api.x.com/2/users/by/username/${cleanUsername}?user.fields=public_metrics,created_at`, {
+                const response = await fetch(`${corsProxy}https://api.x.com/2/users/by/username/${cleanUsername}?user.fields=public_metrics,created_at`, {
                     headers: {
                         'Authorization': `Bearer ${bearerToken}`
                     }
@@ -211,3 +216,4 @@
         }
     </script>
 </body>
+</html>
